<resources>
    <string name="app_name">RED电子券管理系统正式版</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="hint_account_edit">请输入账号 </string>
    <string name="account">账号:</string>
    <string name="pwd_incorrect">原密码不正确</string>
    <string name="card_num_error">卡号有误，请重新输入</string>
    <string name="cust_num_error">客户编号有误，请重新输入</string>
    <string name="hint_passwd_edit">请输入密码</string>
    <string name="passwd">密码:</string>
    <string name="login">登 录</string>
    <string name="regi">注 册</string>
    <string name="rem_account">记住账号</string>
    <string name="rem_password">记住密码</string>
    <string name="login_hint">"温馨提示:非财付通用户可用QQ账号和密码直接登录激活"</string>
    <string name="hint2_verifycode">加载图片中 &#8230;</string>
    <string name="replace_verify_code"><u>看不清，换一张</u></string>
    <string name="hint_verifycode">请输入图片中的字符</string>
    <string name="verifycode">验证码:</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="secondLogin">请输入二级登录密码</string>
    <string name="second_passwd">二级密码:</string>
    <string name="username_can_not_null">用户名不能为空!</string>
    <string name="username_can_not_null2">账号不能为空!</string>
    <string name="pwd_can_not_null">密码不能为空!</string>
    <string name="loging">登录中，请稍候 &#8230;</string>
    <string name="httpError">连接失败</string>
    <string name="btn_yuer"></string>
    <string name="scan_tip">请将二维码置于取景框内扫描</string>
    <string name="scan_retry">二维码扫描出错啦,请重新扫描</string>
    <string name="scan_title">扫一扫</string>
    <string name="btn_scan_sure_txt">确定</string>
    <string name="scan_hint_tx">扫一扫获取卡号</string>
    <string name="scan_input_pwd">请输入卡片密码</string>
    <string name="scan_card_num">卡&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;号:</string>
    <string name="txt_cust_num2">客户编号:</string>
    <string name="input_cust_num">请输入客户编号</string>
    <string name="scan_do_query">查询</string>
    <string name="your_remain">您的余额为:</string>
    <string name="money_set">19.00</string>
    <string name="money_unit">元</string>
    <string name="card_num_can_not_null">卡号不能为空</string>
    <string name="query_pwd_can_not_null">查询密码不能为空</string>
    <string name="query_process">正在查询，请稍候 &#8230;</string>
    <string name="tv_select_date">日期:</string>
    <string name="et_select_date_hint">请选择查询日期</string>
    <string name="no_select_date">您没有选择任何日期</string>
    <string name="title_main_menu">主菜单</string>
    <string name="title_fun_1">充值</string>
    <string name="title_fun_2">充值撤销</string>
    <string name="title_fun_3">查询卡片余额</string>
    <string name="title_fun_4">查询充值明细</string>
    <string name="title_fun_5">对账信息查询</string>
    <string name="title_fun_6">开卡</string>
    <string name="str_back">返回</string>
    <string name="back_againe_to_exit">再按一次退出</string>
    <string name="oper_num">操作员编号:</string>
    <string name="input_num">请输入操作员编号</string>
    <string name="phone_num">手&#160;机&#160;&#160;号&#160;码:</string>
    <string name="reqist_account">帐&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;号:</string>
    <string name="input_phone_num">请输入手机号码</string>
    <string name="register_pwd">密&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;码:</string>
    <string name="please_input_account">请输入线路号</string>
    <string name="input_reg_pwd_hint">请输入验证码</string>
    <string name="btn_reg_txt">注册</string>
    <string name="title_init">初始化</string>
    <string name="init_code">验&#160;&#160;&#160;&#160;证&#160;&#160;&#160;&#160;码:</string>
    <string name="txt_get_code">获取验证码</string>
    <string name="toast_oper_num_not_null">操作员编号不能为空!</string>
    <string name="toast_phone_num_not_null">手机号码不能为空!</string>
    <string name="toast_regi_pwd_not_null">验证码不能为空!</string>
    <string name="registing">正在注册，请稍候 &#8230;</string>
    <string name="consume_card_num">卡&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;号:</string>
    <string name="operater_type">类&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;型:</string>
    <string name="consume_card_num2">卡&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;号:</string>
    <string name="sum_of_recharge">充值金额:</string>
    <string name="sum_of_operater">金&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;额:</string>
    <string name="input_sum_of_recharge">请输入充值金额</string>
    <string name="get_dynamic_code">获取动态码</string>
    <string name="dynamic_code">动&#160;&#160;态&#160;&#160;码:</string>
    <string name="input_dynamic_code">请输入动态码</string>
    <string name="consume_pwd">密&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;码:</string>
    <string name="input_consume_pwd">请输入密码</string>
    <string name="consume_sure">确定</string>
    <string name="consume_phone_num">手机号码:</string>
    <string name="consume_phone_num2">手&#160;机&#160;&#160;号&#160;码:</string>
    <string name="input_consume_phone_num">请输入手机号码</string>
    <string name="phone_num_can_not_null">手机号码不能为空!</string>
    <string name="consume_card_num_can_not_null">卡号不能为空!</string>
    <string name="consume_card_num_or_cust_numcan_not_null">卡号和客户编号不能都为空!</string>
    <string name="sum_of_consume_can_not_null">消费金额不能为空!</string>
    <string name="getting_dynamic_code">获取动态验证码中&#8230;</string>
    <string name="dynamic_code_can_not_null">动态验证码不能为空!</string>
    <string name="consume_pwd_can_not_null">密码不能为空!</string>
    <string name="consume_processing">处理中,请稍候&#8230;</string>
    <string name="processing">处理中,请稍候&#8230;</string>
    <string name="open_card">开卡</string>
    <string name="start_use">开始使用</string>
    <string name="consume_time">时&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;间:</string>
    <string name="txt_cust_num">客户编号:</string>
    <string name="txt_xianluhao">线&#160;&#160;路&#160;&#160;号:</string>
    <string name="txt_cust_name">客户名称:</string>
    <string name="btn_cancel">撤销</string>
    <string name="user_name_incorr">用户名不正确!</string>
    <string name="pwd_incorr">密码不正确!</string>
    <string name="u_name_or_pwd_incorr">用户名或密码不正确!</string>
    <string name="modi_pwd">修改密码</string>
    <string name="help_txt">帮助</string>
    <string name="term_num">终端号:</string>
    <string name="comm_num">商户号:</string>
    <string name="recharge_item_update_time">充值项更新时间:</string>
    <string name="btn_update_recharge_item_txt">更新充值项</string>
    <string name="confi_name">配置</string>
    <string name="confi_info">配置信息</string>
    <string name="modi_pwd_hint1">请输入原始密码</string>
    <string name="modi_pwd_hint2">请输入新密码</string>
    <string name="modi_pwd_hint3">确认新密码</string>
    <string name="title_modify_pwd">修改密码</string>
    <string name="dia_btn_sure_txt">确定</string>
    <string name="dia_btn_canc_txt">取消</string>
    <string name="old_pwd_incorr">原始密码不正确</string>
    <string name="old_pwd_not_null">原始密码不能为空!</string>
    <string name="new_pwd_not_null">新密码不能为空!</string>
    <string name="new_pwd_sure_not_null">确认新密码不能为空!</string>
    <string name="pwd_not_the_same">两次输入的密码不一致</string>
    <string name="modify_pwd_success">修改密码成功!</string>
    <string name="login_success">登录成功!</string>
    <string name="login_faield">登录失败!</string>
    <string name="account_or_pwd_not_corr">用户名或密码不正确!</string>
    <string name="warnming_prompt">温馨提示!</string>
    <string name="is_exit_app">确认退出该应用?</string>
    <string name="get_syta_code">正在获取验证码，请稍候 &#8230;</string>
    <string name="input_select_tern_type">选择终端类型</string>
    <string name="tern_type">终端类型:</string>
    <string name="bu_quan">补券原因</string>
    <string name="yuan">元</string>
    <string name="zhang">张</string>
    <string name="query_remain_faield">查询余额失败!</string>
    <string name="card_not_exist_or_opend">该卡不存在或未开卡使用!</string>
    <string name="recharge_succ">充值成功!</string>
    <string name="recharge_faield">充值失败!</string>
    <string name="get_synt_code_succ">获取验证码成功!</string>
    <string name="get_synt_code_faield">获取验证码失败,请重新获取!</string>
    <string name="get_cust_info_succ">获取客户信息成功!</string>
    <string name="get_cust_info_faield">获取客户信息失败!</string>
    <string name="getting_cust_info">获取客户信息中,请稍候&#8230;</string>
    <string name="custom_tag">客&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;户:</string>
    <string name="get_cust_info">获取客户</string>
    <string name="please_get_cust">请获取客户</string>
    <string name="please_scan_get_card_num">请扫一扫获取卡号</string>
    <string name="query_pwd">密&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;码:</string>
    <string name="open_card_succ">开卡成功!</string>
    <string name="open_card_faield">开卡失败!</string>
    <string name="cust_num">客户编号:</string>
    <string name="cust_num2">客&#160;户&#160;&#160;编&#160;号:</string>
    <string name="cust_num_hing">请输入客户编号</string>
    <string name="query_cust_info">查询客户信息</string>
    <string name="watch_cust_info">查看客户信息</string>
    <string name="card_user_phone_num_hint">电子卡持有人手机号</string>
    <string name="warn_user_phone_num">(非常重要,开卡成功将绑定本卡)</string>
    <string name="card_num_or_cust_num">卡号或客户编号输入一个即可</string>
    <string name="angency_code">经销商代码:</string>
    <string name="input_angency_code">请输入经销商代码</string>
    <string name="warn_angency_conde">(非常重要,此卡将只可以在此经销商处兑换)</string>
    <string name="cust_code_no_null">客户编号不能为空！</string>
    <string name="getting_cust_code">查询中,请稍候&#8230;</string>
    <string name="cust_info_title">客户信息</string>
    <string name="angency_code_not_null">经销商代码不能为空!</string>
    <string name="cust_name">客户名称:</string>
    <string name="handing_process">正在处理，请稍候 &#8230;</string>
    <string name="init_success">初始化成功!</string>
    <string name="init_faield">初始化失败!</string>
    <string name="yanzheng_code">验证码不能为空</string>
    <string name="start_time">开始时间:</string>
    <string name="select_start_time">请选择开始时间</string>
    <string name="end_time">结束时间:</string>
    <string name="select_end_time">请选择结束时间</string>
    <string name="start_time_can_not_null">开始时间不能为空!</string>
    <string name="end_time_can_not_null">结束时间不能为空!</string>
    <string name="get_data_success">获取信息失败!</string>
    <string name="give_up">撤销</string>
    <string name="deal_date">交易日期:</string>
    <string name="deal_time">交易时间:</string>
    <string name="deal_cust_num">客户编号:</string>
    <string name="deal_cust_name">客户名称:</string>
    <string name="item_card_num">卡&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;号:</string>
    <string name="sum_of_consume">消费金额:</string>
    <string name="recharge_sum_of_consume">充值金额:</string>
    <string name="no_data">无信息！</string>
    <string name="recharge_cancle_faield">充值撤销失败!</string>
    <string name="recharge_cancle_success">充值撤销成功!</string>
    <string name="cust_info_name">客户名称:</string>
    <string name="cust_phone_num">手&#160;&#160;机&#160;&#160;号:</string>
    <string name="btn_text_sure">确定</string>
    <string name="cust_info_data_title">客户信息</string>
    <string name="cust_info_yuer">余&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;额:</string>
    <string name="account2">手机号:</string>
    <string name="account3">账&#160;&#160;&#160;&#160;号:</string>
    <string name="hint_account_edit2">请输入手机号 </string>
    <string name="hint_account_edit3">请输入账号 </string>
    <string name="passwd2">密&#160;&#160;&#160;&#160;码:</string>
    <string name="warn_prompt">温馨提示</string>
    <string name="sure_to_open_card">是否确定开卡?</string>
    <string name="sure_to_cancle_recharge">确定撤销该充值?</string>
    <string name="cust_info_cust_num">客户编号:</string>
    <string name="cust_info_cust_name">客户名称:</string>
    <string name="cust_info_cust_yuer">余&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;额:</string>
    <string name="txt_query_self">查询本人</string>
    <string name="txt_query_all_employee">查询所有员工</string>
    <string name="txt_query_some_employee">查询指定员工</string>
    <string name="employee_num">线&#160;&#160;&#160;路&#160;&#160;&#160;号:</string>
    <string name="input_employee_num">请输入线路号</string>
    <string name="txt_query_oper_detail">查询</string>
</resources>