<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <include layout="@layout/selft_title_bar" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="15.0dip"
            android:layout_marginRight="15.0dip"
            android:layout_marginTop="10.0dip"
            android:orientation="vertical" >

            <RelativeLayout
                android:id="@+id/panel_card_num"
                android:layout_width="fill_parent"
                android:layout_height="40.0dip"
                android:layout_marginTop="10.0dip"
                android:background="@drawable/public_line" >

                <TextView
                    android:id="@+id/tv_card_num"
                    style="@style/place_data_coll_tv_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="5.0dip"
                    android:text="@string/consume_card_num2" />

                <EditText
                    android:id="@+id/et_open_card_num"
                    style="@style/place_data_coll_et_client_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="5.0dip"
                    android:layout_marginRight="10.0dip"
                    android:layout_toRightOf="@id/tv_card_num"
                    android:hint="@string/scan_hint_tx" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10.0dip"
                android:gravity="center" >

                <Button
                    android:id="@+id/btn_open_scane"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/login_btn_selector"
                    android:text="@string/scan_title"
                    android:textColor="#ffffffff"
                    android:textSize="18.0sp" />
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/panel_cust_num"
                android:layout_width="fill_parent"
                android:layout_height="40.0dip"
                android:layout_marginTop="10.0dip"
                android:background="@drawable/public_line" >

                <TextView
                    android:id="@+id/tv_cust_num"
                    style="@style/place_data_coll_tv_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="5.0dip"
                    android:text="@string/cust_num2" />

                <EditText
                    android:id="@+id/et_cust_num"
                    style="@style/place_data_coll_et_client_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10.0dip"
                    android:layout_marginRight="10.0dip"
                    android:layout_toRightOf="@id/tv_cust_num"
                    android:hint="@string/cust_num_hing" 
                    android:inputType="number"
                    />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/panel_cust_name"
                android:layout_width="fill_parent"
                android:layout_height="40.0dip"
                android:layout_marginTop="10.0dip"
                android:background="@drawable/public_line" 
                android:visibility="gone"
                >

                <TextView
                    android:id="@+id/tv_cast_name"
                    style="@style/place_data_coll_tv_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="5.0dip"
                    android:text="@string/cust_name" />

                <TextView
                    android:id="@+id/tv_cast_name_value"
                    style="@style/place_data_coll_et_client_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10.0dip"
                    android:layout_marginRight="10.0dip"
                    android:layout_toRightOf="@id/tv_cast_name"
                    android:hint="@string/cust_num_hing" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10.0dip"
                android:gravity="center" >

                <Button
                    android:id="@+id/btn_query_cust_info"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/login_btn_selector"
                    android:text="@string/query_cust_info"
                    android:textColor="#ffffffff"
                    android:textSize="18.0sp" />
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/panel_phone_num"
                android:layout_width="fill_parent"
                android:layout_height="40.0dip"
                android:layout_marginTop="10.0dip"
                android:background="@drawable/public_line" >

                <TextView
                    android:id="@+id/tv_phone_num"
                    style="@style/place_data_coll_tv_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="5.0dip"
                    android:text="@string/consume_phone_num2" />

                <EditText
                    android:id="@+id/et_open_phone_num"
                    style="@style/place_data_coll_et_client_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10.0dip"
                    android:layout_marginRight="10.0dip"
                    android:layout_toRightOf="@id/tv_phone_num"
                    android:hint="@string/card_user_phone_num_hint"
                    android:inputType="number" />
            </RelativeLayout>

            <TextView
                style="@style/place_data_coll_tv_style3"
                android:layout_width="fill_parent"
                android:layout_height="30.0dip"
                android:gravity="center_vertical"
                android:text="@string/warn_user_phone_num" />
			<!-- 
            <RelativeLayout
                android:id="@+id/panel_angency_code"
                android:layout_width="fill_parent"
                android:layout_height="40.0dip"
                android:layout_marginTop="5.0dip"
                android:background="@drawable/public_line" >

                <TextView
                    android:id="@+id/tv_angency_code"
                    style="@style/place_data_coll_tv_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="5.0dip"
                    android:text="@string/angency_code" />

                <EditText
                    android:id="@+id/et_angency_code"
                    style="@style/place_data_coll_et_client_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10.0dip"
                    android:layout_marginRight="10.0dip"
                    android:layout_toRightOf="@id/tv_angency_code"
                    android:hint="@string/input_angency_code" 
                    android:inputType="number"
                    />
            </RelativeLayout>

            <TextView
                style="@style/place_data_coll_tv_style3"
                android:layout_width="fill_parent"
                android:layout_height="30.0dip"
                android:gravity="center_vertical"
                android:text="@string/warn_angency_conde" />
			 -->
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15.0dip"
            android:layout_marginRight="15.0dip"
            android:layout_marginTop="5.0dip"
            android:gravity="center" >

            <Button
                android:id="@+id/btn_open_card"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/login_btn_selector"
                android:text="@string/open_card"
                android:textColor="#ffffffff"
                android:textSize="18.0sp" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>