<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include layout="@layout/selft_title_bar" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="15.0dip"
        android:layout_marginRight="15.0dip"
        android:layout_marginTop="40.0dip"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@id/panel_card_pwd"
            android:layout_width="fill_parent"
            android:layout_height="40.0dip"
            android:background="@drawable/public_line" >

            <TextView
                android:id="@id/tv_card_pwd"
                style="@style/place_data_coll_tv_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5.0dip"
                android:text="@string/reqist_account" />

            <EditText
                android:id="@+id/et_phone_num"
                style="@style/place_data_coll_et_client_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10.0dip"
                android:layout_marginRight="10.0dip"
                android:layout_toRightOf="@id/tv_card_pwd"
                android:hint="@string/please_input_account" />
        </RelativeLayout>

        <Button
            android:id="@+id/btn_register"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20.0dip"
            android:layout_marginLeft="3.0dip"
            android:background="@drawable/login_btn_selector"
            android:text="@string/title_init"
            android:textColor="#ffffffff"
            android:textSize="18.0sp" />
    </LinearLayout>

</LinearLayout>